[package]
name = "pk-rs"
version = "0.1.0"
description = "High-level Rust wrappers/bindings for PackageKit"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
keywords = ["ffi", "packagekit", "bindings"]
license = "GPL-3.0"
repository = "https://github.com/nikhil-prabhu/pk-rs"
documentation = "https://docs.rs/pk-rs"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.150"

[build-dependencies]
cc = "1.0.83"
system-deps = "6.2.0"

[package.metadata.system-deps]
packagekit-glib2 = "1.2.5"
glib = { name = "glib-2.0", version = "2.78" }
